nodejs/versioned_docs/version-1.12/api/class-browsertype.mdx
---
id: class-browsertype
title: "BrowserType"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserType provides methods to launch a specific browser instance or connect to an existing one. The following is a typical example of using Playwright to drive automation:

```js
const { chromium } = require('playwright');  // Or 'firefox' or 'webkit'.

(async () => {
  const browser = await chromium.launch();
  const page = await browser.newPage();
  await page.goto('https://example.com');
  // other actions...
  await browser.close();
})();
```


- [browserType.connect(params)](./api/class-browsertype.mdx#browser-type-connect)
- [browserType.connectOverCDP(params)](./api/class-browsertype.mdx#browser-type-connect-over-cdp)
- [browserType.executablePath()](./api/class-browsertype.mdx#browser-type-executable-path)
- [browserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch)
- [browserType.launchPersistentContext(userDataDir[, options])](./api/class-browsertype.mdx#browser-type-launch-persistent-context)
- [browserType.launchServer([options])](./api/class-browsertype.mdx#browser-type-launch-server)
- [browserType.name()](./api/class-browsertype.mdx#browser-type-name)

## browserType.connect(params) {#browser-type-connect}
- `params` &#60;[Object]&#62;
  - `wsEndpoint` &#60;[string]&#62; A browser websocket endpoint to connect to.
  - `headers` &#60;[Object]<[string], [string]>&#62; Additional HTTP headers to be sent with web socket connect request. Optional.
  - `slowMo` &#60;[number]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging. Optional.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: &#60;[Promise]<[Browser]>&#62;

This methods attaches Playwright to an existing browser instance.

## browserType.connectOverCDP(params) {#browser-type-connect-over-cdp}
- `params` &#60;[Object]&#62;
  - `endpointURL` &#60;[string]&#62; A CDP websocket endpoint or http url to connect to. For example `http://localhost:9222/` or `ws://127.0.0.1:9222/devtools/browser/387adf4c-243f-4051-a181-46798f4a46f4`.
  - `headers` &#60;[Object]<[string], [string]>&#62; Additional HTTP headers to be sent with connect request. Optional.
  - `slowMo` &#60;[number]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging. Optional.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: &#60;[Promise]<[Browser]>&#62;

This methods attaches Playwright to an existing browser instance using the Chrome DevTools Protocol.

The default browser context is accessible via [browser.contexts()](./api/class-browser.mdx#browser-contexts).

:::note
Connecting over the Chrome DevTools Protocol is only supported for Chromium-based browsers.
:::

## browserType.executablePath() {#browser-type-executable-path}
- returns: &#60;[string]&#62;

A path where Playwright expects to find a bundled browser executable.

## browserType.launch([options]) {#browser-type-launch}
- `options` &#60;[Object]&#62;
  - `args` &#60;[Array]<[string]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `channel` &#60;[string]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `chromiumSandbox` &#60;[boolean]&#62; Enable Chromium sandboxing. Defaults to `false`.
  - `devtools` &#60;[boolean]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `downloadsPath` &#60;[string]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `env` &#60;[Object]<[string], [string]|[number]|[boolean]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `executablePath` &#60;[string]&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `firefoxUserPrefs` &#60;[Object]<[string], [string]|[number]|[boolean]>&#62; Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).
  - `handleSIGHUP` &#60;[boolean]&#62; Close the browser process on SIGHUP. Defaults to `true`.
  - `handleSIGINT` &#60;[boolean]&#62; Close the browser process on Ctrl-C. Defaults to `true`.
  - `handleSIGTERM` &#60;[boolean]&#62; Close the browser process on SIGTERM. Defaults to `true`.
  - `headless` &#60;[boolean]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `ignoreDefaultArgs` &#60;[boolean]|[Array]<[string]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. If an array is given, then filters out the given default arguments. Dangerous option; use with care. Defaults to `false`.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging.
  - `proxy` &#60;[Object]&#62; Network proxy settings.
    - `server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `bypass` &#60;[string]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `username` &#60;[string]&#62; Optional username to use if HTTP proxy requires authentication.
    - `password` &#60;[string]&#62; Optional password to use if HTTP proxy requires authentication.
  - `slowMo` &#60;[number]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `tracesDir` &#60;[string]&#62; If specified, traces are saved into this directory.
- returns: &#60;[Promise]<[Browser]>&#62;

Returns the browser instance.

You can use `ignoreDefaultArgs` to filter out `--mute-audio` from default arguments:

```js
const browser = await chromium.launch({  // Or 'firefox' or 'webkit'.
  ignoreDefaultArgs: ['--mute-audio']
});
```

> **Chromium-only** Playwright can also be used to control the Google Chrome or Microsoft Edge browsers, but it works best with the version of Chromium it is bundled with. There is no guarantee it will work with any other version. Use `executablePath` option with extreme caution.
>
> If Google Chrome (rather than Chromium) is preferred, a [Chrome Canary](https://www.google.com/chrome/browser/canary.html) or [Dev Channel](https://www.chromium.org/getting-involved/dev-channel) build is suggested.
>
> Stock browsers like Google Chrome and Microsoft Edge are suitable for tests that require proprietary media codecs for video playback. See [this article](https://www.howtogeek.com/202825/what%E2%80%99s-the-difference-between-chromium-and-chrome/) for other differences between Chromium and Chrome. [This article](https://chromium.googlesource.com/chromium/src/+/lkgr/docs/chromium_browser_vs_google_chrome.md) describes some differences for Linux users.

## browserType.launchPersistentContext(userDataDir[, options]) {#browser-type-launch-persistent-context}
- `userDataDir` &#60;[string]&#62; Path to a User Data Directory, which stores browser session data like cookies and local storage. More details for [Chromium](https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md#introduction) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Command_Line_Options#User_Profile). Note that Chromium's user data directory is the **parent** directory of the "Profile Path" seen at `chrome://version`.
- `options` &#60;[Object]&#62;
  - `acceptDownloads` &#60;[boolean]&#62; Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
  - `args` &#60;[Array]<[string]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `bypassCSP` &#60;[boolean]&#62; Toggles bypassing page's Content-Security-Policy.
  - `channel` &#60;[string]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `chromiumSandbox` &#60;[boolean]&#62; Enable Chromium sandboxing. Defaults to `false`.
  - `colorScheme` &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.
  - `deviceScaleFactor` &#60;[number]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.
  - `devtools` &#60;[boolean]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `downloadsPath` &#60;[string]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `env` &#60;[Object]<[string], [string]|[number]|[boolean]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `executablePath` &#60;[string]&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `extraHTTPHeaders` &#60;[Object]<[string], [string]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.
  - `geolocation` &#60;[Object]&#62;
    - `latitude` &#60;[number]&#62; Latitude between -90 and 90.
    - `longitude` &#60;[number]&#62; Longitude between -180 and 180.
    - `accuracy` &#60;[number]&#62; Non-negative accuracy value. Defaults to `0`.
  - `handleSIGHUP` &#60;[boolean]&#62; Close the browser process on SIGHUP. Defaults to `true`.
  - `handleSIGINT` &#60;[boolean]&#62; Close the browser process on Ctrl-C. Defaults to `true`.
  - `handleSIGTERM` &#60;[boolean]&#62; Close the browser process on SIGTERM. Defaults to `true`.
  - `hasTouch` &#60;[boolean]&#62; Specifies if viewport supports touch events. Defaults to false.
  - `headless` &#60;[boolean]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `httpCredentials` &#60;[Object]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
    - `username` &#60;[string]&#62;
    - `password` &#60;[string]&#62;
  - `ignoreDefaultArgs` &#60;[boolean]|[Array]<[string]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. If an array is given, then filters out the given default arguments. Dangerous option; use with care. Defaults to `false`.
  - `ignoreHTTPSErrors` &#60;[boolean]&#62; Whether to ignore HTTPS errors during navigation. Defaults to `false`.
  - `isMobile` &#60;[boolean]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
  - `javaScriptEnabled` &#60;[boolean]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.
  - `locale` &#60;[string]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging.
  - `offline` &#60;[boolean]&#62; Whether to emulate network being offline. Defaults to `false`.
  - `permissions` &#60;[Array]<[string]>&#62; A list of permissions to grant to all pages in this context. See [browserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.
  - `proxy` &#60;[Object]&#62; Network proxy settings.
    - `server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `bypass` &#60;[string]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `username` &#60;[string]&#62; Optional username to use if HTTP proxy requires authentication.
    - `password` &#60;[string]&#62; Optional password to use if HTTP proxy requires authentication.
  - `recordHar` &#60;[Object]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into `recordHar.path` file. If not specified, the HAR is not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.
    - `omitContent` &#60;[boolean]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
    - `path` &#60;[string]&#62; Path on the filesystem to write the HAR file to.
  - `recordVideo` &#60;[Object]&#62; Enables video recording for all pages into `recordVideo.dir` directory. If not specified videos are not recorded. Make sure to await [browserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.
    - `dir` &#60;[string]&#62; Path to the directory to put videos into.
    - `size` &#60;[Object]&#62; Optional dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
      - `width` &#60;[number]&#62; Video frame width.
      - `height` &#60;[number]&#62; Video frame height.
  - `reducedMotion` &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.
  - `screen` &#60;[Object]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
  - `slowMo` &#60;[number]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `timezoneId` &#60;[string]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
  - `tracesDir` &#60;[string]&#62; If specified, traces are saved into this directory.
  - `userAgent` &#60;[string]&#62; Specific user agent to use in this context.
  - `videoSize` &#60;[Object]&#62; **DEPRECATED** Use `recordVideo` instead.
    - `width` &#60;[number]&#62; Video frame width.
    - `height` &#60;[number]&#62; Video frame height.
  - `videosPath` &#60;[string]&#62; **DEPRECATED** Use `recordVideo` instead.
  - `viewport` &#60;[null]|[Object]&#62; Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.
    - `width` &#60;[number]&#62; page width in pixels.
    - `height` &#60;[number]&#62; page height in pixels.
- returns: &#60;[Promise]<[BrowserContext]>&#62;

Returns the persistent browser context instance.

Launches browser that uses persistent storage located at `userDataDir` and returns the only context. Closing this context will automatically close the browser.

## browserType.launchServer([options]) {#browser-type-launch-server}
- `options` &#60;[Object]&#62;
  - `args` &#60;[Array]<[string]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `channel` &#60;[string]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `chromiumSandbox` &#60;[boolean]&#62; Enable Chromium sandboxing. Defaults to `false`.
  - `devtools` &#60;[boolean]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `downloadsPath` &#60;[string]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `env` &#60;[Object]<[string], [string]|[number]|[boolean]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `executablePath` &#60;[string]&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `firefoxUserPrefs` &#60;[Object]<[string], [string]|[number]|[boolean]>&#62; Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).
  - `handleSIGHUP` &#60;[boolean]&#62; Close the browser process on SIGHUP. Defaults to `true`.
  - `handleSIGINT` &#60;[boolean]&#62; Close the browser process on Ctrl-C. Defaults to `true`.
  - `handleSIGTERM` &#60;[boolean]&#62; Close the browser process on SIGTERM. Defaults to `true`.
  - `headless` &#60;[boolean]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `ignoreDefaultArgs` &#60;[boolean]|[Array]<[string]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. If an array is given, then filters out the given default arguments. Dangerous option; use with care. Defaults to `false`.
  - `logger` &#60;[Logger]&#62; Logger sink for Playwright logging.
  - `port` &#60;[number]&#62; Port to use for the web socket. Defaults to 0 that picks any available port.
  - `proxy` &#60;[Object]&#62; Network proxy settings.
    - `server` &#60;[string]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `bypass` &#60;[string]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `username` &#60;[string]&#62; Optional username to use if HTTP proxy requires authentication.
    - `password` &#60;[string]&#62; Optional password to use if HTTP proxy requires authentication.
  - `timeout` &#60;[number]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `tracesDir` &#60;[string]&#62; If specified, traces are saved into this directory.
- returns: &#60;[Promise]<[BrowserServer]>&#62;

Returns the browser app instance.

Launches browser server that client can connect to. An example of launching a browser executable and connecting to it later:

```js
const { chromium } = require('playwright');  // Or 'webkit' or 'firefox'.

(async () => {
  const browserServer = await chromium.launchServer();
  const wsEndpoint = browserServer.wsEndpoint();
  // Use web socket endpoint later to establish a connection.
  const browser = await chromium.connect({ wsEndpoint });
  // Close browser instance.
  await browserServer.close();
})();
```

## browserType.name() {#browser-type-name}
- returns: &#60;[string]&#62;

Returns browser name. For example: `'chromium'`, `'webkit'` or `'firefox'`.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"